--- a/software/src/omaha/templates/components/speaker-tooltip.html
+++ b/software/src/omaha/templates/components/speaker-tooltip.html
@@ -15,9 +15,10 @@
         margin-top: 5px;
         width: 100%;
       }
+
     </style>
     <div>
-      <b>Volume: <span>{{speaker.volumeLevel}}</span></b>
+      <b>Volume: <span>{{speaker.VolumeLevel}}</span></b>
     </div>
     <div>
       <paper-button on-click="_selectSpeaker">speaker</paper-button>
