fix the clicks, shit

--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -50,7 +50,7 @@
 
     <iron-ajax
           id="frontendSpeakerUpdateAjax"
-          url="/system/backtofront/ids=105"
+          url="/system/backtofront/"
           method="POST"
           content-type="application/json"
           handle-as="json"
