--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -48,7 +48,7 @@
           <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
         </div>
 
-        <h1 id="pagingvolume"> Paging Volume </h1>
+        <h1 id="pagingvolumelabel"> Paging Volume </h1>
 
         <div id="slider3" class="layout horizontal">
           <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
