--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -165,7 +165,7 @@ paper-card {
   margin-top: calc(0.05 * 100vh);
 }
 
-#pagingvolume {
+#pagingvolumelabel {
   font-size: 24px;
   margin-top: calc(0.05 * 100vh);
 }
