--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -121,7 +121,15 @@
         a.speaker.VolumeLevel[1] = data.response.music;
         a.speaker.VolumeLevel[2] = data.response.paging;
         a.speaker.VolumeLevel[3] = data.response.masking;
-        console.log(a.speaker.VolumeLevel);
+        a.speaker.AveragingMode = data.response.averaging;
+        a.speaker.FadeTime = data.response.fadetime;
+        a.speaker.FadeLevel = data.response.fadelevel;
+
+        for (i in data.response.Equalizer) {
+          a.speaker.Equalizer[i] = data.response.Equalizer[i];
+          console.log(i, data.response.Equalizer[i]);
+        }
+        console.log(a.speaker);
         //speaker.volumeLevel = data.response.volume;
         //console.log(speaker.volumeLevel);
       },
