--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -83,23 +83,38 @@
 
       <div class="card-actions">
         <paper-button on-click="_setEqualizerClicked">set equalizer</paper-button>
-        <paper-dropdown-menu id="equalizerDropdown" no-label-float label="Equalizer Preset:">
-          <paper-listbox attr-for-selected="value" selected="{{selection}}" id="equalizerMenu" class="dropdown-content" value="0">
+        <paper-dropdown-menu id="equalizerMenu" no-label-float label="Equalizer Preset:">
+          <paper-listbox id="equalizerListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
+            <paper-item value="Currently Applied">Current</paper-item>
+            <paper-item value="Add New Preset">Add New Preset</paper-item>
             <paper-item value="Armstrong">Armstrong</paper-item>
             <paper-item value="Bold Beranek Newman">Bold Beranek Newman</paper-item>
             <paper-item value="Cambridge">Cambridge</paper-item>
             <paper-item value="Close Office (43?)">Close Office (43?)</paper-item>
             <paper-item value="Soft dB Default">Soft dB Default</paper-item>
             <paper-item value="Soft dB Mellow">Soft dB Mellow</paper-item>
-            <paper-item value="custom">custom</paper-item>
+            <paper-item id="custom" value="custom">custom</paper-item>
           </paper-listbox>
         </paper-dropdown-menu>
         <span>{{value}}</span>
       </div>
     </paper-card>
     <paper-toast id="toast">Equalizer set to <span>{{iirConstantsString}}</span></paper-toast>
+    <paper-toast id="toasty" text="varaitic toast message, if you are seeing this, please dial 867-5309, nah but just tell me bro"></paper-toast>
   </template>
   <script>
+
+  //var fragment = create("<paper-item id=" + "name" + " value=" + "custom" + ">" + "custom" + "</paper-item>"); 
+  $(document).ready(function() {
+    console.log(document.getElementById("custom"));
+    temp = document.createElement("paper-item");
+    temp.innerHTML = "<paper-item id=" + "custom555" + " value=" + "custom555" + ">" + "custom555" + "</paper-item>";
+    document.getElementById("equalizerListbox").appendChild(temp);    // This is not adding to the correct spot, the div is off or something so the Polymer click event is not listening to the button
+    // !!!!!!!!!!!! FIX THIS !!!!!!!!!!!!
+  });
+  
+
+  //document.getElementById("custom").appendChild(temp);
 
   var iirConstants = [];
 
@@ -169,30 +184,67 @@
       },*/
 
       listeners: {
-        'equalizerMenu.iron-select': '_presetSelectionChanged'
+        'equalizerListbox.iron-select': '_presetSelectionChanged'
       },
       
       _presetSelectionChanged: function(event) {    // Why does this have event in the thing? It is not like that in volume selector
         console.log(this.speakerId);    // This says the speakerId is undefined
 
-        var menu = document.getElementById('equalizerMenu');
-
+        //var menu = document.getElementById('equalizerMenu');
         console.log(this.speaker);
-
 
         //if(this.$.menu.selected + 1)
 
         //menu.averaging = this.$.menu.selected + 1;
 
-        var selected = this.$.equalizerMenu.selected.toLowerCase().valueOf(); 
+        var selected = this.$.equalizerListbox.selected.toLowerCase().valueOf().replace("\n", "");   // do this for all whitespace characters
+        var associtationLink = -1;
 
-        for (var i = 0; i < this.speaker.PresetNames.length; i++) {
-          console.log("\"" + this.$.equalizerMenu.selected.toLowerCase().valueOf() + "\"", " \"" + this.speaker.PresetNames[i].toLowerCase() + "\"");
-          if(selected == this.speaker.PresetNames[i].toLowerCase().valueOf()) {
-            console.log("hi");
+        var sliders = document.getElementsByClassName("ui-slider-range ui-widget-header ui-corner-all ui-slider-range-min");
+        var handles = document.getElementsByClassName("ui-slider-handle ui-state-default ui-corner-all");
+
+        if(selected == "currently applied") {
+          this.$.toasty.text = "Currently applied constants loaded!";
+          this.$.toasty.show();
+
+          for (var i = 0; i < controller.speaker.Current.length; i++) {
+            sliders[i].style.height = (controller.speaker.Current[i] + 40) * 2 + "%";    // why does this have to be lower case
+            handles[i].style.bottom = (controller.speaker.Current[i] + 40) * 2 + "%";
+            $("#text" + (parseInt(i) + 1)).val(controller.speaker.Current[i]);
+            iirConstants[i] = controller.speaker.Current[i];
           }
-        }
+        } else if(selected == "add new preset") {
+            console.log("Adding new preset coming soon...");
+            //this.$.toasty.text = "Add New Preset";
+            this.$.toasty.text = "Custom presets coming soon!";
+            this.$.toasty.show();
+          /*    need to do something here to add the presets in, probably just make a handler
+            for (var i = 0; i < controller.speaker.Current.length; i++) {
+              sliders[i].style.height = "" + (controller.speaker.Current[i] + 40) * 2 + "%";    // why does this have to be lower case
+              handles[i].style.bottom = "" + (controller.speaker.Current[i] + 40) * 2 + "%";
+              $("#text" + (parseInt(i) + 1)).val(controller.speaker.Current[i]);
+              iirConstants[i] = controller.speaker.Current[i];
+            }
+          */
+        } else {
+            for (var i = 0; i < this.speaker.PresetNames.length; i++) {
+              this.$.toasty.text = this.$.equalizerListbox.selected + " preset loaded!";
+              this.$.toasty.show();
 
+              if(selected == this.speaker.PresetNames[i].toLowerCase().replace("\n", "")) {
+                console.log("Speaker " + this.speakerId + " selected " + selected);
+                // show a toast here with the preset applied message
+                associtationLink = i;   // this will either need to be bounded by the the restriction that two names cannot be the same or we need to check
+              }
+            }
+
+            for (var i = 0; i < this.speaker.Equalizer[associtationLink].length; i++) {
+              sliders[i].style.height = (this.speaker.Equalizer[associtationLink][i] + 40) * 2 + "%";    // why does this have to be lower case
+              handles[i].style.bottom = (this.speaker.Equalizer[associtationLink][i] + 40) * 2 + "%";
+              $("#text" + (parseInt(i) + 1)).val(this.speaker.Equalizer[associtationLink][i]);
+              iirConstants[i] = this.speaker.Equalizer[associtationLink][i];
+            }
+        }
 
           // Need to put a toast thing here like we have on the volume selector page
          /*
