dynamic preset adding works now, for some reason the handler is not working or something :(

--- a/software/src/omaha/templates/components/averaging-controller.html
+++ b/software/src/omaha/templates/components/averaging-controller.html
@@ -13,6 +13,8 @@
 <link rel="import" href="/bower_components/paper-styles/paper-styles.html">
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
 
+<!-- Change this to effectivness-comfort slider -->
+
 <dom-module id="averaging-controller">
   <template>
     <style>
@@ -100,7 +102,7 @@
   </template>
   <script>
 
-    
+
 
     Polymer({
       is: 'averaging-controller',
