--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -155,8 +155,26 @@
             iirConstants[i] = controller.speaker.Current[i];
           }
 
+          // Polymer.dom.flush() idk if we need this anymore
+          var listbox = document.getElementById("equalizerListbox");
+          console.log(Polymer.dom(listbox).children);
+          var motherPolymer = Polymer.dom(listbox).children; 
 
+          // remove the paper-items from the last time and the other speakers, basically throwing away the stuff that we dont need
+          if(motherPolymer.length > 2) {    // change that 2 to something that is not so fragile
+            for(var i = motherPolymer.length - 1; i > 1; i--)
+              Polymer.dom(listbox).removeChild(motherPolymer[i]);
+          }
 
+          // injecting the paper-items for the presets
+          for (i in controller.speaker.PresetNames) {
+            temp = document.createElement("paper-item");
+            temp.setAttribute("value", controller.speaker.PresetNames[i].valueOf().replace("\n", ""));
+            temp.setAttribute("id", controller.speaker.PresetNames[i].valueOf().replace("\n", ""));
+            // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
+            temp.innerHTML = controller.speaker.PresetNames[i].valueOf().replace("\n", "");
+            Polymer.dom(listbox).appendChild(temp);
+          }
         }
       },
       
