--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -147,6 +147,8 @@
           console.log(data.response.Equalizer[i]);
         }
 
+        a.speaker.Response = "true";
+
         console.log("Speaker", a.speaker);
         //speaker.volumeLevel = data.response.volume;
         //console.log(speaker.volumeLevel);
@@ -312,8 +314,6 @@
               console.log(e)
               console.log(speaker);
 
-
-
               var frontendSpeakerUpdateAjax = document.getElementById("frontendSpeakerUpdateAjax");
               console.log("If I do say myself sir, this is a pretty snazzy way to go about doing this!");
               frontendSpeakerUpdateAjax.body = {
@@ -321,8 +321,6 @@
               };
               console.log("frontendSpeakerUpdateAjax ", frontendSpeakerUpdateAjax.body);
               frontendSpeakerUpdateAjax.generateRequest(); 
-
-
 
               mapController.selected = speaker;
               // get the point's coordinate
