--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -138,8 +138,9 @@ paper-card {
   margin-bottom: 100%; /* This as 20 */
 }
 
-#equalizerMenu {
-  width: 230px;
+#equalizerListbox {
+  width: 220px;
+  overflow-x: hidden;
 }
 
 .custom > .bands {
